# kdewizard

./: CMakeLists.txt  Makefile.am  drivepage.cpp  drivepage.h  intropage.cpp  intropage.h  kdewizard.kdelnk  kprintwrapper  krunonce  linkpage.cpp  linkpage.h  main.cpp  printerpage.cpp  printerpage.h  theme.cpp  themepage.cpp  themepage.h  toplevel.cpp  toplevel.h
data/: Makefile.am  kdedevel.kdelnk  kdeftp.kdelnk  kdewww.kdelnk  printer.kdelnk
html/: Makefile.am  intro.html
pics/: Makefile.am  beostheme.xpm  mactheme.xpm  wintheme.xpm
themes/BeOS/: BeOS.themerc
themes/Windows/: Windows.themerc  close.xpm  iconify.xpm  maximize.xpm  maximizedown.xpm
